// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useDataGridKeyboardShortcuts [React 16] returns a popover containing a list of keyboard shortcuts 1`] = `
<body>
  <div>
    <div
      data-test-subj="hookRoot"
    >
      <div
        class="euiPopover euiPopover-isOpen emotion-euiPopover-inline-block"
        data-test-subj="dataGridKeyboardShortcutsPopover"
      >
        <span
          class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
        >
          <button
            aria-label="Keyboard shortcuts"
            class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
            data-test-subj="dataGridKeyboardShortcutsButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="keyboard"
            />
          </button>
        </span>
      </div>
    </div>
  </div>
  <div
    data-euiportal="true"
  >
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-describedby="generated-id"
        aria-live="off"
        aria-modal="true"
        class="euiPanel euiPanel--plain euiPopover__panel emotion-euiPanel-grow-m-plain-euiPopover__panel-light-isOpen-hasTransform-bottom"
        data-autofocus="true"
        data-popover-open="true"
        data-popover-panel="true"
        role="dialog"
        style="top: 16px; left: -18px; z-index: 2000;"
        tabindex="0"
      >
        <div
          class="euiPopover__arrowWrapper emotion-euiPopoverArrowWrapper"
          style="left: 9px; bottom: 100%;"
        >
          <div
            class="euiPopover__arrow emotion-euiPopoverArrow-bottom"
            data-popover-arrow="bottom"
          />
        </div>
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a dialog. Press Escape, or tap/click outside the dialog to close.
        </p>
        <div>
          <div
            class="euiPopoverTitle emotion-euiPopoverTitle-none-s"
          >
            <h2
              id="generated-id"
            >
              Keyboard shortcuts
            </h2>
          </div>
          <div
            class="euiText euiDataGrid__keyboardShortcuts emotion-euiText-xs-euiDataGrid__keyboardShortcuts"
          >
            <dl
              aria-labelledby="generated-id"
              class="euiDescriptionList emotion-euiDescriptionList-column-center-s-s"
              data-type="column"
              style="grid-template-columns: auto auto;"
            >
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Up arrow
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Move one cell up
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Down arrow
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Move one cell down
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Right arrow
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Move one cell right
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Left arrow
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Move one cell left
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Home
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Move to the first cell of the current row
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  End
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Move to the last cell of the current row
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Ctrl
                </kbd>
                 
                <kbd>
                  Home
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Move to the first cell of the current page
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Ctrl
                </kbd>
                 
                <kbd>
                  End
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Move to the last cell of the current page
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Page Up
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Go to the last row of the previous page
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Page Down
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Go to the first row of the next page
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Enter
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Open cell details and actions
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Escape
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Close cell details and actions
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`useDataGridKeyboardShortcuts [React 17] returns a popover containing a list of keyboard shortcuts 1`] = `
<body>
  <div>
    <div
      data-test-subj="hookRoot"
    >
      <div
        class="euiPopover euiPopover-isOpen emotion-euiPopover-inline-block"
        data-test-subj="dataGridKeyboardShortcutsPopover"
      >
        <span
          class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
        >
          <button
            aria-label="Keyboard shortcuts"
            class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
            data-test-subj="dataGridKeyboardShortcutsButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="keyboard"
            />
          </button>
        </span>
      </div>
    </div>
  </div>
  <div
    data-euiportal="true"
  >
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-describedby="generated-id"
        aria-live="off"
        aria-modal="true"
        class="euiPanel euiPanel--plain euiPopover__panel emotion-euiPanel-grow-m-plain-euiPopover__panel-light-isOpen-hasTransform-bottom"
        data-autofocus="true"
        data-popover-open="true"
        data-popover-panel="true"
        role="dialog"
        style="top: 16px; left: -18px; z-index: 2000;"
        tabindex="0"
      >
        <div
          class="euiPopover__arrowWrapper emotion-euiPopoverArrowWrapper"
          style="left: 9px; bottom: 100%;"
        >
          <div
            class="euiPopover__arrow emotion-euiPopoverArrow-bottom"
            data-popover-arrow="bottom"
          />
        </div>
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a dialog. Press Escape, or tap/click outside the dialog to close.
        </p>
        <div>
          <div
            class="euiPopoverTitle emotion-euiPopoverTitle-none-s"
          >
            <h2
              id="generated-id"
            >
              Keyboard shortcuts
            </h2>
          </div>
          <div
            class="euiText euiDataGrid__keyboardShortcuts emotion-euiText-xs-euiDataGrid__keyboardShortcuts"
          >
            <dl
              aria-labelledby="generated-id"
              class="euiDescriptionList emotion-euiDescriptionList-column-center-s-s"
              data-type="column"
              style="grid-template-columns: auto auto;"
            >
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Up arrow
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Move one cell up
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Down arrow
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Move one cell down
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Right arrow
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Move one cell right
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Left arrow
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Move one cell left
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Home
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Move to the first cell of the current row
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  End
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Move to the last cell of the current row
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Ctrl
                </kbd>
                 
                <kbd>
                  Home
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Move to the first cell of the current page
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Ctrl
                </kbd>
                 
                <kbd>
                  End
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Move to the last cell of the current page
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Page Up
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Go to the last row of the previous page
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Page Down
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Go to the first row of the next page
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Enter
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Open cell details and actions
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Escape
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Close cell details and actions
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`useDataGridKeyboardShortcuts [React 18] returns a popover containing a list of keyboard shortcuts 1`] = `
<body>
  <div />
  <div>
    <div
      data-test-subj="hookRoot"
    >
      <div
        class="euiPopover euiPopover-isOpen emotion-euiPopover-inline-block"
        data-test-subj="dataGridKeyboardShortcutsPopover"
      >
        <span
          class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
        >
          <button
            aria-label="Keyboard shortcuts"
            class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
            data-test-subj="dataGridKeyboardShortcutsButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="keyboard"
            />
          </button>
        </span>
      </div>
    </div>
  </div>
  <div
    data-euiportal="true"
  >
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-describedby="generated-id"
        aria-live="off"
        aria-modal="true"
        class="euiPanel euiPanel--plain euiPopover__panel emotion-euiPanel-grow-m-plain-euiPopover__panel-light-isOpen-hasTransform-bottom"
        data-autofocus="true"
        data-popover-open="true"
        data-popover-panel="true"
        role="dialog"
        style="top: 16px; left: -18px; z-index: 2000;"
        tabindex="0"
      >
        <div
          class="euiPopover__arrowWrapper emotion-euiPopoverArrowWrapper"
          style="left: 9px; bottom: 100%;"
        >
          <div
            class="euiPopover__arrow emotion-euiPopoverArrow-bottom"
            data-popover-arrow="bottom"
          />
        </div>
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a dialog. Press Escape, or tap/click outside the dialog to close.
        </p>
        <div>
          <div
            class="euiPopoverTitle emotion-euiPopoverTitle-none-s"
          >
            <h2
              id="generated-id"
            >
              Keyboard shortcuts
            </h2>
          </div>
          <div
            class="euiText euiDataGrid__keyboardShortcuts emotion-euiText-xs-euiDataGrid__keyboardShortcuts"
          >
            <dl
              aria-labelledby="generated-id"
              class="euiDescriptionList emotion-euiDescriptionList-column-center-s-s"
              data-type="column"
              style="grid-template-columns: auto auto;"
            >
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Up arrow
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Move one cell up
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Down arrow
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Move one cell down
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Right arrow
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Move one cell right
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Left arrow
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Move one cell left
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Home
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Move to the first cell of the current row
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  End
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Move to the last cell of the current row
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Ctrl
                </kbd>
                 
                <kbd>
                  Home
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Move to the first cell of the current page
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Ctrl
                </kbd>
                 
                <kbd>
                  End
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Move to the last cell of the current page
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Page Up
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Go to the last row of the previous page
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Page Down
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Go to the first row of the next page
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Enter
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Open cell details and actions
              </dd>
              <dt
                class="euiDescriptionList__title emotion-euiDescriptionList__title-column-compressed-right"
              >
                <kbd>
                  Escape
                </kbd>
              </dt>
              <dd
                class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal-left"
              >
                Close cell details and actions
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;
